--- a/Thongkekeo.html
+++ b/Thongkekeo.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="vi" class="h-full">
 
@@ -566,7 +567,7 @@
                 return (!khuVuc || item['Khu vực'] === khuVuc) &&
                     (!startDate || itemDate >= new Date(startDate)) &&
                     (!endDate || itemDate <= new Date(endDate)) &&
-                    (!keHoanh || item['Mã kế hoạch'].includes(keHoanh)) &&
+                    (!keHoanh || item['MKH'].includes(keHoanh)) &&
                     (!trangThai || item['Trạng thái'] === trangThai) &&
                     (!nhanvien || item['Đội kéo'] === nhanvien);
             });
@@ -589,7 +590,7 @@
         function populateFilterDropdowns() {
             const uniqueValues = sanpham.reduce((acc, item) => {
                 acc.khuVuc.add(item['Khu vực']);
-                acc.keHoanh.add(item['Mã kế hoạch']);
+                acc.keHoanh.add(item['MKH']);
                 acc.trangThai.add(item['Trạng thái']);
                 acc.nhanvien.add(item['Đội kéo']);
                 return acc;
