--- a/XNCAP.HTML
+++ b/XNCAP.HTML
@@ -328,6 +328,7 @@
             <select id="chungLoai${cableCount}" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                 <option value="">Chọn chủng loại</option>
                 <option value="FOCAL">FOCAL</option>
+                 <option value="FPT">FPT</option>
                 <option value="sacom">sacom</option>
                 <option value="Vina">Vina</option>
                 <option value="Không rõ" selected>Không rõ</option>
