--- a/thongkesphan.html
+++ b/thongkesphan.html
@@ -289,7 +289,7 @@
                     <h2 class="text-2xl font-semibold mb-4 text-gray-900 dark:text-white">Tổng hợp lương theo nhân sự
                     </h2>
                     <div id="salaryTableContainer"
-                        class="bg-white dark:bg-gray-800 shadow overflow-hidden sm:rounded-lg"></div>
+                        class="bg-white dark:bg-gray-800 shadow overflow-x-auto sm:rounded-lg"></div>
                 </div>
 
                 <!-- Bảng tổng hợp theo loại sản phẩm -->
@@ -297,12 +297,12 @@
                     <h2 class="text-2xl font-semibold mb-4 text-gray-900 dark:text-white">Tổng hợp theo loại sản phẩm
                     </h2>
                     <div id="productTableContainer"
-                        class="bg-white dark:bg-gray-800 shadow overflow-hidden sm:rounded-lg"></div>
+                        class="bg-white dark:bg-gray-800 shadow overflow-x-auto sm:rounded-lg"></div>
                 </div>
                 <div class="mt-8">
                     <h2 class="text-2xl font-semibold mb-4 text-gray-900 dark:text-white">Danh sách sản phẩm</h2>
                     <div id="productListContainer"
-                        class="bg-white dark:bg-gray-800 shadow overflow-hidden sm:rounded-lg"></div>
+                        class="bg-white dark:bg-gray-800 shadow overflow-x-auto sm:rounded-lg"></div>
                 </div>
             </main>
         </div>
