--- a/ThongkeHan.html
+++ b/ThongkeHan.html
@@ -289,7 +289,7 @@
                     <h2 class="text-2xl font-semibold mb-4 text-gray-900 dark:text-white">Tổng hợp lương theo nhân sự
                     </h2>
                     <div id="salaryTableContainer"
-                        class="bg-white dark:bg-gray-800 shadow overflow-hidden sm:rounded-lg"></div>
+                        class="bg-white dark:bg-gray-800 shadow overflow-x-auto sm:rounded-lg"></div>
                 </div>
 
                 <!-- Bảng tổng hợp theo loại sản phẩm -->
@@ -297,12 +297,12 @@
                     <h2 class="text-2xl font-semibold mb-4 text-gray-900 dark:text-white">Tổng hợp theo loại sản phẩm
                     </h2>
                     <div id="productTableContainer"
-                        class="bg-white dark:bg-gray-800 shadow overflow-hidden sm:rounded-lg"></div>
+                        class="bg-white dark:bg-gray-800 shadow overflow-x-auto sm:rounded-lg"></div>
                 </div>
                 <div class="mt-8">
                     <h2 class="text-2xl font-semibold mb-4 text-gray-900 dark:text-white">Danh sách sản phẩm</h2>
                     <div id="productListContainer"
-                        class="bg-white dark:bg-gray-800 shadow overflow-hidden sm:rounded-lg"></div>
+                        class="bg-white dark:bg-gray-800 shadow overflow-x-auto sm:rounded-lg"></div>
                 </div>
             </main>
         </div>
@@ -423,7 +423,7 @@
             const currentPageData = sanphamData.slice(startIndex, endIndex);
 
             let tableHTML = `
-        <table class="min-w-full divide-y divide-gray-200 dark:divide-gray-700">
+        <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
             <thead class="bg-gray-50 dark:bg-gray-800">
                 <tr>
                     <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-300 uppercase tracking-wider">Thời gian</th>
@@ -570,7 +570,7 @@
 
             // Tạo bảng HTML
             let tableHTML = `
-        <table class="min-w-full divide-y divide-gray-200 dark:divide-gray-700">
+        <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
             <thead class="bg-gray-50 dark:bg-gray-800">
                 <tr>
                     <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-300 uppercase tracking-wider">Nhân viên</th>
@@ -620,7 +620,7 @@
             });
 
             let tableHTML = `
-        <table class="min-w-full divide-y divide-gray-200 dark:divide-gray-700">
+        <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
             <thead class="bg-gray-50 dark:bg-gray-800">
                 <tr>
                     <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 dark:text-gray-300 uppercase tracking-wider">Loại sản phẩm</th>
