--- a/thongkesphan.html
+++ b/thongkesphan.html
@@ -285,22 +285,22 @@
                         </div>
                     </div>
                 </div>
-                <div class="mt-8">
-                    <h2 class="text-2xl font-semibold mb-4 text-gray-900 dark:text-white">Tổng hợp lương theo nhân sự
+                <div class="mt-8 relative overflow-x-auto">
+                    <h2 class="text-1xl font-semibold mb-4 text-gray-900 dark:text-white">Tổng hợp lương theo nhân sự
                     </h2>
                     <div id="salaryTableContainer"
                         class="bg-white dark:bg-gray-800 shadow overflow-x-auto sm:rounded-lg"></div>
                 </div>
 
                 <!-- Bảng tổng hợp theo loại sản phẩm -->
-                <div class="mt-8">
-                    <h2 class="text-2xl font-semibold mb-4 text-gray-900 dark:text-white">Tổng hợp theo loại sản phẩm
+                <div class="mt-8 relative overflow-x-auto">
+                    <h2 class="text-1xl font-semibold mb-4 text-gray-900 dark:text-white">Tổng hợp theo loại sản phẩm
                     </h2>
                     <div id="productTableContainer"
                         class="bg-white dark:bg-gray-800 shadow overflow-x-auto sm:rounded-lg"></div>
                 </div>
-                <div class="mt-8">
-                    <h2 class="text-2xl font-semibold mb-4 text-gray-900 dark:text-white">Danh sách sản phẩm</h2>
+                <div class="mt-8 relative overflow-x-auto">
+                    <h2 class="text-1xl font-semibold mb-4 text-gray-900 dark:text-white">Danh sách sản phẩm</h2>
                     <div id="productListContainer"
                         class="bg-white dark:bg-gray-800 shadow overflow-x-auto sm:rounded-lg"></div>
                 </div>
