--- a/ThongkeHan.html
+++ b/ThongkeHan.html
@@ -127,27 +127,27 @@
                         <input id="toDate" type="date"
                             class="w-full bg-white dark:bg-gray-700 border-gray-300 dark:border-gray-600 rounded-md shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50 text-gray-900 dark:text-white">
                     </div>
-                    <div class="mb-4">
+                    <div class="mb-4" hidden>
                         <label class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-2">Chức vụ</label>
                         <select id="filterChucVu"
                             class="w-full bg-white dark:bg-gray-700 border-gray-300 dark:border-gray-600 rounded-md shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50 text-gray-900 dark:text-white">
                         </select>
                     </div>
-                    <div class="mb-4">
+                    <div class="mb-4" hidden>
                         <label class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-2">Mã nhân
                             viên</label>
                         <select id="filterMaNhanVien"
                             class="w-full bg-white dark:bg-gray-700 border-gray-300 dark:border-gray-600 rounded-md shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50 text-gray-900 dark:text-white">
                         </select>
                     </div>
-                    <div class="mb-4">
+                    <div class="mb-4" hidden>
                         <label class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-2">Loại sản
                             phẩm</label>
                         <select id="filterLoaiSanPham"
                             class="w-full bg-white dark:bg-gray-700 border-gray-300 dark:border-gray-600 rounded-md shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50 text-gray-900 dark:text-white">
                         </select>
                     </div>
-                    <div class="mb-4">
+                    <div class="mb-4" hidden>
                         <label class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-2">Trạng
                             thái</label>
                         <select id="filterTrangThai"
@@ -157,11 +157,11 @@
                     <div class="mt-6 flex flex-wrap gap-4">
                         <button id="applyFilters" type="button"
                             class="bg-indigo-600 text-white py-2 px-4 rounded-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-opacity-50">
-                            Áp dụng bộ lọc
+                            Áp dụng
                         </button>
                         <button id="resetFilters" type="button"
                             class="bg-gray-300 text-gray-700 py-2 px-4 rounded-md hover:bg-gray-400 focus:outline-none focus:ring-2 focus:ring-gray-500 focus:ring-opacity-50">
-                            Đặt lại bộ lọc
+                            Đặt lại
                         </button>
                         <button id="exportExcel" type="button"
                             class="bg-green-600 text-white py-2 px-4 rounded-md hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-opacity-50">
