--- a/ThongkeHan.html
+++ b/ThongkeHan.html
@@ -76,7 +76,8 @@
         <!-- Header -->
         <header class="bg-white dark:bg-gray-800 shadow-md fixed top-0 left-0 right-0 z-30">
             <div class="max-w-9xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center">
-                <h1 class="text-2xl font-bold text-gray-900 dark:text-white">Tên công ty</h1>
+                <img src="Logo N có bóng/Logo N.png" alt="">
+                <h1 class="text-2xl font-bold text-gray-900 dark:text-white">NZ ERP PRO</h1>
                 <div class="flex items-center">
                     <button id="toggleFilters"
                         class="lg:hidden mr-4 p-2 rounded-md bg-gray-200 dark:bg-gray-700 text-gray-700 dark:text-gray-200">
