--- a/thongkesphan.html
+++ b/thongkesphan.html
@@ -93,7 +93,7 @@
         <!-- Header -->
         <header class="bg-white dark:bg-gray-800 shadow-md fixed top-0 left-0 right-0 z-30">
             <div class="max-w-9xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center">
-                <img src="Logo N có bóng/Logo N.png" alt="">
+                <img src="Logo N có bóng/Logo N.png" alt="" width="100px">
                 <h1 class="text-2xl font-bold text-gray-900 dark:text-white">NZ ERP PRO</h1>
                 <div class="flex items-center">
                     <button id="toggleFilters"
