--- a/ThongkeHan.html
+++ b/ThongkeHan.html
@@ -7,6 +7,8 @@
     <title>Dashboard</title>
     <script src="https://cdn.tailwindcss.com"></script>
 
+    
+    <link rel="shortcut icon" href="Logo N có bóng/Logo N.png" type="image/x-icon">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.16.9/xlsx.full.min.js"></script>
@@ -76,7 +78,6 @@
         <!-- Header -->
         <header class="bg-white dark:bg-gray-800 shadow-md fixed top-0 left-0 right-0 z-30">
             <div class="max-w-9xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center">
-                <img src="Logo N có bóng/Logo N.png" alt=""  width="100px">
                 <h1 class="text-2xl font-bold text-gray-900 dark:text-white">NZ ERP PRO</h1>
                 <div class="flex items-center">
                     <button id="toggleFilters"
