--- a/kehoachtrienkhai.html
+++ b/kehoachtrienkhai.html
@@ -190,7 +190,7 @@
                     <th>Khối lượng port</th>
                     <th>Tỷ lệ hoàn thành kéo</th>
                     <th>Tỷ lệ hàn</th>
-                    <th>Tỷ port</th>
+                    <th>Tỷ lệ port hoành thành</th>
                     <th>Ghi chú công trình</th>
                     <th>Ghi chú thêm</th>
                 </tr>
