--- a/ThuChi.html
+++ b/ThuChi.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="vi">
 
@@ -373,7 +374,8 @@
                     "Ghi chú": data.ghi_chu,
                     "Lịch sử": data.nhan_vien + ' đã tạo phiếu vào ngày ' + data.ngay_chi + "(Phiếu được tạo bằng api)",
                     "Đối tượng": data.doi_tuong,
-                    "Khách hàng": data.khach_hang
+                    "Khách hàng": data.khach_hang,
+                    "MDA": data.mda
 
                 };
 
